@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.h,v 1.27 2002/12/17 19:00:18 swdev Exp $"
+ * "$Id: printers.h,v 1.28 2003/01/24 17:55:06 mike Exp $"
  *
  *   Printer definitions for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -95,6 +95,7 @@ extern quota_t		*AddQuota(printer_t *p, const char *username);
 extern void		DeleteAllPrinters(void);
 extern void		DeletePrinter(printer_t *p);
 extern void		DeletePrinterFilters(printer_t *p);
+extern printer_t	*FindDest(const char *name);
 extern printer_t	*FindPrinter(const char *name);
 extern quota_t		*FindQuota(printer_t *p, const char *username);
 extern void		FreePrinterUsers(printer_t *p);
@@ -115,5 +116,5 @@ extern void		WritePrintcap(void);
 
 
 /*
- * End of "$Id: printers.h,v 1.27 2002/12/17 19:00:18 swdev Exp $".
+ * End of "$Id: printers.h,v 1.28 2003/01/24 17:55:06 mike Exp $".
  */
